feat: reimplement Torbox support and add multi-provider switching (v1.1.0)

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
+PROVIDER=alldebrid
+# PROVIDER=torbox
 ALLDEBRID_API_KEY=
+TORBOX_API_KEY=
 AUTH_USERNAME=admin
 AUTH_PASSWORD=adminadmin
 PORT=8000
