chore: improve .env.example documentation

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,24 @@
-USE_PROXY=false
+# --- Provider Configuration ---
+# Choose your backend provider: 'alldebrid' or 'torbox'
 PROVIDER=alldebrid
-# PROVIDER=torbox
+
+# --- API Keys ---
+# Required: Fill in the API key for your chosen provider
 ALLDEBRID_API_KEY=
 TORBOX_API_KEY=
+
+# --- Proxy Settings ---
+# Set to 'true' to stream downloads through this server.
+# REQUIRED for Torbox if hosting on a VPS to bypass IP locking.
+# Recommended: 'false' for Alldebrid or Local Hosting (faster redirects).
+USE_PROXY=false
+
+# --- Security ---
+# Credentials for Tinfoil to access this server
 AUTH_USERNAME=admin
 AUTH_PASSWORD=adminadmin
+
+# --- Server Settings ---
 PORT=8000
+# Optional: Lock access to a specific Nintendo Switch UID
 SWITCH_UID=
